<resources>
    <string name="app_name">P2MP16001</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="cantidad_de_examenes">Cantidad de Examenes</string>
    <string name="cantidad_de_hojas_empaque">Cantidad de hojas empaque</string>
    <string name="solicitar_impresion">Solicitar impresión</string>

    <string name="detectando">Detectando...</string>
    <string name="detalles_extra">Detalles extra</string>
    <string name="elegir_archivo">Elegir archivo...</string>
    <string name="detalles_de_la_solicitud">Detalles de la solicitud</string>
    <string name="escuela">Escuela</string>
    <string name="docente">Docente</string>

    <string name="estudianteMENU">Estudiante</string>
    <string name="DocenteMENU">Docente</string>
    <string name="EncargadoImpresionMENU">Encargado de Impresion</string>
    <string name="WebServicesMENU">Servicios Web</string>


    <!-- ESTUDIANTE-->
    <string name="PrimeraRevisionESTU">Primera Revision</string>
    <string name="SegundaRevisionESTU">Segunda Revision</string>
    <string name="DiferidoESTU">Diferido</string>
    <string name="RepetidoESTU">Repetido</string>

    <!--DOCENTE-->
    <string name="AdministrarPrimeraRevisionDOC">Administrar Primera Revision</string>
    <string name="AdministrarSegundaRevisionDOC">Administrar Segunda Revision</string>
    <string name="AdministrarDiferiddosDOC">Administrar Diferiddos</string>
    <string name="AdministrarRepetidosDOC">Administrar Repetidos</string>
    <string name="AdministrarImpresionesDOC">Administrar Impresiones</string>
    <string name="GestionarLocalesRevisionDOC">Gestionar Locales de Revision</string>
    <string name="GestionarRolesDocentesDOC">Gestionar Roles de Docentes</string>
    <string name="GestionarEscuelasDOC">Gestionar Escuelas</string>
    <string name="GestionarEvaluacionesDOC">Gestionar Evaluaciones</string>
    <string name="GestionarfechasevaluacionesDOC">Gestionar fechas evaluaciones</string>

    <!-- IMPRESIONES -->
    <string name="AdministrarsolicitudesimpresionIMP">Administrar solicitudes de impresión</string>
    <string name="AdministrarMotivosIMP">Administrar Motivos</string>
    <string name="AdministrarEncargadosImpresionesIMP">Administrar Encargados de Impresiones</string>

    <!--SERVICIOS WEB-->
    <string name="ActualizarListaLocalesWEB">Actualizar Lista de Locales</string>
    <string name="CantidadSolicitudesProcesosAcademicosWEB">Cantidad Solicitudes de Procesos Academicos</string>
    <string name="ActualizarListaEstudiantesWEB">Actualizar Lista de Estudiantes</string>
    <string name="EliminarEstudianteWEB">Eliminar Estudiante</string>
    <string name="IngresarmateriaWEB">Ingresar materia</string>
    <string name="ConsultarListaUsuariosWEB">Consultar Lista de Usuarios</string>

    <string name="email">Correo</string>
    <string name="password">Contraseña</string>
    <string name="forgotPassword">Olvidaste tu contraseña?</string>
    <string name="firstName">Nombre</string>
    <string name="lastName">Apellido</string>
    <string name="login">Iniciar sesión</string>
    <string name="createAct">Crear cuenta</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>

    <!--Projecto 2-->
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="pictureText">Picture!</string>
    <string name="contentDescriptionImagenSet">This is where the picture is going to assign</string>
    <string name="contentDescriptionButtonImage">This is a button with an image that open the camera or galery</string>
    <string name="title_activity_hola">Hola</string>

</resources>
