<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<TableLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="10dip"
    android:stretchColumns="*"  >
    <TextView
        android:text="@string/solicitar_impresion"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center"/>
    <TableRow android:id="@+id/tableRow1">
        <TextView android:text="Escuela"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"/>
        <!-- Solo sirve como padding -->
        <EditText
            android:id="@+id/hiddenEdit1"
            android:inputType="number"
            android:maxLength="3"
            android:gravity="center"
            android:visibility="invisible"/>
    </TableRow>
    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal"
        android:gravity="center">

        <EditText
            android:id="@+id/editEscuela"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:editable="false"
            android:focusable="false"
            android:clickable="false"
            android:inputType="text"
            android:gravity="center"
            android:textColor="#000000"
            android:maxLength="100" />
    </LinearLayout>
    <TableRow android:id="@+id/tableRow2">
        <TextView android:text="Docente"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"/>
        <!-- Solo sirve como padding -->
        <EditText
            android:id="@+id/hiddenEdit2"
            android:inputType="number"
            android:maxLength="3"
            android:gravity="center"
            android:visibility="invisible"/>
    </TableRow>
    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal"
        android:gravity="center">

        <EditText
            android:id="@+id/editDocente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:editable="false"
            android:focusable="false"
            android:clickable="false"
            android:inputType="text"
            android:gravity="center"
            android:textColor="#000000"
            android:maxLength="100" />
    </LinearLayout>
    <TableRow>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:text="@string/cantidad_de_examenes" />
        <EditText
            android:id="@+id/cantidadExamenes"
            android:inputType="number"
            android:maxLength="3"
            android:gravity="center"/>
    </TableRow>

    <TableRow>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:text="@string/cantidad_de_hojas_empaque" />
        <EditText
            android:id="@+id/cantidadHojasEmpaque"
            android:inputType="number"
            android:gravity="center"
            android:maxLength="2" />
    </TableRow>
    <TableRow>
        <TextView android:text="@string/detalles_extra"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"/>
        <!-- Solo sirve como padding -->
        <EditText
            android:id="@+id/hiddenEdit"
            android:inputType="number"
            android:maxLength="3"
            android:gravity="center"
            android:visibility="invisible"/>
    </TableRow>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal"
        android:gravity="center">

        <EditText
            android:id="@+id/detallesExtra"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:gravity="top"
            android:maxLength="100" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:dividerPadding="10sp">

        <EditText
            android:id="@+id/path"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:focusable="false"
            android:text="@string/elegir_archivo"
            android:gravity="center"
            android:inputType="none" />

        <Button
            android:id="@+id/buscar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="Buscar"
            android:onClick="buscarArchivo"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:paddingTop="20dp">
        <Button
            android:id="@+id/enviarSolicitud"
            android:onClick="enviarSolicitud"
            android:text="Enviar solicitud"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"/>

        <Button
            android:onClick="cancelar"
            android:text="Cancelar registro"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>

</TableLayout>
</ScrollView>